--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -3,12 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost\\TOMSQL;Database=gambit;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
-    },
-    "JWTSettings": {
-      "TokenKey": "tnC3iHG259RUqChsE8rwqXVRmRmXoBkNsxD8474Jkr685E"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;User Id=appuser; Password=secret;Database=gambit"
+  },
+  "JWTSettings": {
+    "TokenKey": "tnC3iHG259RUqChsE8rwqXVRmRmXoBkNsxD8474Jkr685E"
   }
 }
