--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\TOMSQL;Database=gambit;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False"
+    "DefaultConnection": "Server=host.docker.internal;Port=5432;User Id=appuser; Password=secret;Database=gambit"
   },
   "JWTSettings": {
     "TokenKey": "tnC3iHG259RUqChsE8rwqXVRmRmXoBkNsxD8474Jkr685E"
