--- a/API/fly.toml
+++ b/API/fly.toml
@@ -1,10 +1,15 @@
-# fly.toml app configuration file generated for gambitapp on 2023-10-29T20:43:06+02:00
+# fly.toml app configuration file generated for gambitapp on 2023-10-29T22:54:50+02:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = "gambitapp"
 primary_region = "arn"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
+
+[experimental]
+  auto_rollback = true
 
 [build]
   image = "kouzber/gambit:latest"
@@ -12,10 +17,27 @@ primary_region = "arn"
 [env]
   ASPNETCORE_URLS = "http://+:8080"
 
-[http_service]
+[[services]]
+  protocol = "tcp"
   internal_port = 8080
-  force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 0
   processes = ["app"]
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
+
+  [[services.tcp_checks]]
+    interval = "15s"
+    timeout = "2s"
+    grace_period = "1s"
